== 2/17/09
  * Included enhancements for .co.nz domains as provided by Matt Thompson

== 12/1/08
  * Included atourino's fix for .mobi domains.
  * Updated Rakefile to publish to RubyForge.

== 11/10/08
  * Support for expiration date parsing added as requested by Jorge Yau.
  * Renamed "created_date" to "creation_date" for consistency.
  * Moved supporting libraries into a support folder.
  * Added support for .jp and .co.jp etc. domain names.