@@ -12,6 +12,7 @@ Whois::Server.define('at', 'whois.nic.at')
 Whois::Server.define('bg', 'whois.digsys.bg')
 Whois::Server.define('bi', 'whois.nic.bi')
 Whois::Server.define('bj', 'www.nic.bj')
+Whois::Server.define('br', 'whois.nic.br')
 Whois::Server.define('bz', 'whois.belizenic.bz')
 Whois::Server.define('cc', 'whois.nic.cc')
 Whois::Server.define('cd', 'whois.nic.cd')
