@@ -1,3 +1,6 @@
+== 7/24/09
+  * Added support for .br domain names by Ruy Rocha
+
 == 2/17/09
   * Included enhancements for .co.nz domains as provided by Matt Thompson
 
